# full-stack-agent

./: README.md  index.html  main.py
agent/: __init__.py  requirements.txt
agent/backend/: .gitignore  README.MD  __init__.py  agent.py  pyproject.toml  requirements.txt
agent/backend/config/: api_config.py  auth_config.py  database.py
agent/backend/schemas/: data_models.py
agent/backend/tests/: test_api_tools.py
agent/backend/tools/: __init__.py  api_tools.py  database_tools.py  file_tools.py
agent/frontend/: .env  __init__.py
agent/manager/: __init__.py  agent.py  config.py  coordination_tools.py  run_manager.py  task_analyzer.py  validation_tools.py  workflow_manager.py
agent/sub-agents/backend/: agent.py  pyproject.toml  requirements.txt
agent/sub-agents/backend/config/: __init__.py  api_config.py  autn_config.py  databse.py
agent/sub-agents/backend/schemas/: __init__.py  api_schemas.py
agent/sub-agents/backend/tests/: __init__.py  test_agent.py  test_auth_tools.py  test_database_tools.py  test_file_tools.py
agent/sub-agents/backend/tools/: auth_tools.py
agent/sub-agents/frontend/: agent.py  requirements.txt  run.py
